snapshots/syntax/library/functions/file/curdir/curdir_in_loop.snap
---
source: src/syntax/library/functions/file/curdir.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: ForStatement
      children:
        - kind: ForKeyword
          text: For
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: i
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: NumericLiteralExpression
          children:
            - kind: IntegerLiteral
              text: "1"
        - kind: Whitespace
          text: " "
        - kind: ToKeyword
          text: To
        - kind: Whitespace
          text: " "
        - kind: NumericLiteralExpression
          children:
            - kind: IntegerLiteral
              text: "5"
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: AssignmentStatement
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: path
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: BinaryExpression
                  children:
                    - kind: BinaryExpression
                      children:
                        - kind: BinaryExpression
                          children:
                            - kind: CallExpression
                              children:
                                - kind: Identifier
                                  text: CurDir
                                - kind: LeftParenthesis
                                  text: (
                                - kind: ArgumentList
                                  children: []
                                - kind: RightParenthesis
                                  text: )
                            - kind: Whitespace
                              text: " "
                            - kind: Ampersand
                              text: "&"
                            - kind: Whitespace
                              text: " "
                            - kind: StringLiteralExpression
                              children:
                                - kind: StringLiteral
                                  text: "\"\\file\""
                        - kind: Whitespace
                          text: " "
                        - kind: Ampersand
                          text: "&"
                        - kind: Whitespace
                          text: " "
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: i
                    - kind: Whitespace
                      text: " "
                    - kind: Ampersand
                      text: "&"
                    - kind: Whitespace
                      text: " "
                    - kind: StringLiteralExpression
                      children:
                        - kind: StringLiteral
                          text: "\".txt\""
                - kind: Newline
                  text: "\n"
        - kind: NextKeyword
          text: Next
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: i
        - kind: Newline
          text: "\n"
