snapshots/syntax/library/functions/file/curdir/curdir_in_print.snap
---
source: src/syntax/library/functions/file/curdir.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: PrintStatement
      children:
        - kind: PrintKeyword
          text: Print
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"Current directory: \""
        - kind: Semicolon
          text: ;
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: CurDir
        - kind: LeftParenthesis
          text: (
        - kind: RightParenthesis
          text: )
        - kind: Newline
          text: "\n"
